# templatte

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scratch/: README.md
src/templatte/: __init__.py
tests/: __init__.py  test_templatte.py
