[tool.poetry]
name = "templatte"
version = "0.1.0"
description = "A bit of an opinionated setup."
authors = ["Stark, Dylan <dylan.stark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.9.0"
flake8 = "^5.0.4"
black = "^22.8.0"
coverage = {version = "^6.5.0", extras = ["toml"]}
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
flake8-bugbear = "^22.9.23"
flake8-simplify = "^0.19.3"
flake8-docstrings = "^1.6.0"
mypy = "^0.981"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
testpaths=["tests"]

[tool.pyright]
include = ["src"]

[tool.mypy]
files = ["src", "tests"]
cache_dir = "${HOME}/.mypy_cache"
ignore_errors = false
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
